# aircher

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ACP_INTEGRATION_ANALYSIS.md  AGENT.md  AGENTS.md  AIRCHER.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_IMPLEMENTATION_ROADMAP.md  COMPETITIVE_ROADMAP.md  CONTEXT-TODO.md  CONTEXT.md  Cargo.toml  DOCS.md  EMBEDDING_DECISION.md  EMBEDDING_STRATEGY.md  ENTERPRISE_READINESS_ASSESSMENT.md  ENTERPRISE_ROADMAP.md  FEDORA_SETUP.md  FINAL_ANALYSIS.md  HNSWLIB_RESEARCH_ANALYSIS.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  Makefile  NEXT_PRIORITIES.md  OLLAMA_TESTING_GUIDE.md  OUTLINE.md  PROJECT_STATUS.md  README.md  REFERENCE.md  RELEASE_READINESS_CHECKLIST.md  SEARCH_IMPROVEMENTS.md  SESSION_MANAGEMENT_AND_INTELLIGENCE_DESIGN.md  SPEC.md  STATUS.md  SWE_BENCH_READY.md  SYSTEM_DESIGN_PRIORITIES.md  (+22 more)
.cargo/: config.toml
.claude/: settings.local.json  tasks.json
.github/workflows/: ci.yml
ai/: AGENT_ANALYSIS.md  AGENT_CORE_ANALYSIS.md  AGENT_MODES.md  BENCHMARK_SETUP.md  CONTEXT_AWARENESS_IMPLEMENTATION.md  DECISIONS.md  DOCKER_INVESTIGATION_2025-10-30.md  EMPIRICAL_VALIDATION_PLAN.md  ISSUE_2_COMPLETED.md  MANUAL_VALIDATION_TASKS.md  MODEL_CONFIG_PLAN.md  OPTION_B_VALIDATION_LOOP_PLAN.md  PLAN.md  RESEARCH.md  SESSION_SUMMARY_2025-10-31.md  STATUS.md  STRATEGIC_SUMMARY.md  SWE_BENCH_SETUP_PLAN.md  SYSTEM_DESIGN_2025.md  TEST_RESULTS.md  TODO.md  VALIDATION_ASSESSMENT.md  VALIDATION_STATUS.md
ai/design/: README.md
ai/research/: README.md  competitive-analysis-2025.md  memory-system-architecture.md  toad-tui-features.md
aircher-intelligence-engine/: pyproject.toml
aircher-intelligence-engine/src/aircher_intelligence_engine/: __init__.py
aircher-intelligence-engine/src/aircher_intelligence_engine/context/: __init__.py  window_manager.py
aircher-intelligence-engine/src/aircher_intelligence_engine/mcp/: __init__.py  server.py
aircher-intelligence-engine/src/aircher_intelligence_engine/providers/: __init__.py  fallback_manager.py
aircher-intelligence-engine/src/aircher_intelligence_engine/storage/: __init__.py  database_manager.py
aircher-intelligence-engine/src/aircher_intelligence_engine/tools/: __init__.py  context_intelligence.py  file_operations.py  interactive_commands.py  sophisticated_editing.py
archive/: README.md  REVIEW_2025-11-12.md
archive/ai/: CLAUDE_OAUTH_SETUP.md  CONTEXT_AWARENESS_IMPLEMENTATION.md  CONTEXT_AWARENESS_IMPROVEMENT.md  DOCUMENTATION_RECOVERY_SUMMARY.md  INTEGRATION_REVIEW.md  ISSUE_1_COMPLETED.md  ISSUE_4_COMPLETED.md  MODEL_ROUTING_STRATEGY.md  OPTION_C_WEEK8_SUBAGENTS_PLAN.md  QUICK_START_DEV.md  ROADMAP.md  SESSION_SUMMARY_2025-10-31_PHASE2.md  SESSION_SUMMARY_2025-11-12_CLEANUP.md  SIMPLE_TESTS.md  STATUS.md  TESTING_STRATEGY.md  TEST_RESULTS_2025-10-30.md  VALIDATION_LOOP_USAGE.md  VALIDATION_READY.md  models.toml  session-cleanup-summary.md
archive/old-config/: .dockerignore  main.py
archive/old-docs-archive/: demo.md  test_plan.md  test_web_tools.py
archive/old-tests/: acp_integration_test.rs  agent_workflow_test.rs  approval_integration_test.rs  c_cpp_test.rs  (+41 more)
docs/: AGENT_MD_WORKFLOW.md  ARCHITECTURE.md  AUTH.md  AUTH_INTEGRATION_GAPS.md  AUTH_SYSTEM.md  CLI_DESIGN.md  CLI_FINAL_DESIGN.md  CLI_REFERENCE.md  CODE_STANDARDS.md  CORE.md  CURRENT_STATE.md  DEVELOPMENT.md  DIRECTORY_STRUCTURE.md  DOC_STANDARDS.md  EMBEDDING_SYSTEM_REFACTOR.md  HNSWLIB_PROTOTYPE_STATUS.md  JJ_STANDARDS.md  LEGAL_NOTICE.md  MODEL_HANDLING.md  NEXT_STEPS_MULTI_PROVIDER.md  PERFORMANCE_ANALYSIS.md  PHASE_6_COMPLETION.md  PHASE_7_COMPLETION.md  PHASE_8_COMPLETION.md  QUICK_START_DEV.md  README.md  STATUS.md  TASK_MANAGEMENT_GUIDE.md  TESTING.md  TUI_STATUS.md  UI_MODES.md  VECTOR_BACKEND_ARCHITECTURE.md  VECTOR_DATABASE_STRATEGY.md  XDG_COMPLIANCE.md  ZED_AUTOCOMPLETE_PLAN.md  acp-integration.md  claude-conversation.md  claude-conversation2.md  claude-fuzzy.md  claude-perm-cmd-modal.md  (+6 more)
examples/: 2025_embedding_analysis.rs  agent_first_poc.rs  complete_cost_system.rs  cost-optimized-config.toml  embedding_integration.rs  final_transparency_demo.rs  go124_features.go  inspect_acp.rs  integrated_chat.rs  mcp_intelligence_demo.rs  practical_reality_demo.rs  smart_embedding_demo.rs  swe_bench_validation_loop.rs  test_oauth.rs  tool_comparison_analysis.rs  tui_integration_poc.rs
internal/: AGENT_FIRST_ROADMAP.md  DECISIONS.md  DISCOVERIES.md  KNOWLEDGE.md  NOW.md  PROJECT_REALITY.md  REALITY_CHECK.md  REFERENCE.md  STATUS.md  TECH_SPEC.md
models/: README.md  swerank-config.json
poc-memory-agent/: .gitignore  benchmark.py  code_graph.json  episodic_memory.py  knowledge_graph.py  requirements.txt  test_integration.py
scripts/: check-quality.py  download-models.sh  install-duckdb-fedora.sh  run-benchmark.sh
src/: code_chunking.rs  first_run.rs  lib.rs  main.rs  model_manager.rs  permissions.rs  query_intelligence.rs  search_display.rs  search_presets.rs  semantic_search.rs  vector_search.rs
terminal_bench_adapter/: __init__.py  aircher_agent.py
test_monitoring/: calculator.rs  math_utils.py
test_search/: test.js
tests/: acp_integration_test.rs  acp_week6_features_test.rs  agent_workflow_test.rs  approval_integration_test.rs  c_cpp_test.rs  c_focused_test.rs  chunking_test.rs  cli_integration_test.rs  comprehensive_demo.rs  csharp_test.rs  debug_test.rs  embedding_integration_test.rs  end_to_end_test.rs  git_workflow_integration_test.rs  go_test.rs  instant_distance_test.rs  integration_test.rs  integration_tests.rs  intelligence_integration_test.rs  intelligence_integration_tests.rs  intelligence_tests.rs  java_test.rs  lsp_tools_integration_test.rs  mcp_integration.rs  mcp_transport_test.rs  memory_system_integration_test.rs  minimal_approval_test.rs  model_loading_test.rs  ollama_autodiscovery_tests.rs  ollama_tests.rs  openai_tests.rs  orchestration_test.rs  performance_test.rs  ruby_test.rs  search_display_test.rs  semantic_search_test.rs  session_tests.rs  simple_cli_test.rs  simple_integration.rs  smart_compaction_test.rs  (+6 more)
(+770 files in other folders)
