[package]
name = "aircher"
version = "0.1.0"
edition = "2021"
description = "Advanced AI terminal assistant with intelligent context management"
authors = ["Nick Russo <nijaru7@gmail.com>"]
license = "MIT"
repository = "https://github.com/nijaru/aircher"
keywords = ["ai", "terminal", "assistant", "tui", "llm"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
testing = []

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "stream"] }

# HuggingFace model downloads
hf-hub = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cross-platform config directories  
directories = "5.0"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Git integration
git2 = "0.19"

# Token counting
tiktoken-rs = "0.6"

# Configuration already included above

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Futures utilities
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Vector search and ML
instant-distance = "0.6"
rayon = "1.10"

# Code parsing for better chunking
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-yaml = "0.7"
tree-sitter-sequel = "0.3"  # Better SQL support than tree-sitter-sql
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"

# Bytes utilities
bytes = "1.0"

# HTTP event streaming
eventsource-stream = "0.2"

# Async trait support
async-trait = "0.1"

# Directory utilities
dirs = "5.0"
walkdir = "2.0"

# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }

# ONNX Runtime for embedded models (will be re-enabled in next iteration)
# ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }

# Tokenizers for text processing (will be re-enabled in next iteration)  
# tokenizers = "0.20"

# System information
num_cpus = "1.0"

# Cryptographic hashing
sha2 = "0.10"

# Streaming iterator for tree-sitter
streaming-iterator = "0.1"

# Random number generation for HNSW
rand = "0.8"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
safetensors = "0.6.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[lib]
name = "aircher"
path = "src/lib.rs"

[[bin]]
name = "aircher"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
