[project]
name = "aircher"
version = "0.0.0"
description = "Intelligent ACP-compatible coding agent backend with novel memory architecture"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Nick Russo", email = "nijaru7@gmail.com"}
]
keywords = ["agent", "coding", "ai", "acp", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # Core Agent Framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",

    # ACP Protocol - will implement custom
    # "agent-protocol>=0.1.0",  # Conflicts with pydantic v2

    # Databases
    "duckdb>=0.10.0",
    "chromadb>=0.5.0",
    # "sqlite3",  # Built-in, not needed as dependency

    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=15.0.0",

    # Code Analysis
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",

    # Vector Operations
    "sentence-transformers>=3.0.0",
    "hnswlib>=0.8.0",

    # Async & Networking
    "aiohttp>=3.9.0",
    "aiofiles>=24.0.0",
    "websockets>=12.0",
    "httpx>=0.27.0",

    # CLI & TUI
    "click>=8.1.0",
    "rich>=13.7.0",
    "textual>=0.47.0",

    # Configuration & Serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "toml>=0.10.2",

    # Development & Utilities
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "typer-cli>=0.0.13",  # Type checking from uv creators
    "vulture>=2.10",  # Dead code detection
    "pre-commit>=3.6.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
aircher = "aircher.cli:main"

[project.urls]
Homepage = "https://github.com/nijaru/aircher"
Documentation = "https://aircher.readthedocs.io"
Repository = "https://github.com/nijaru/aircher"
Issues = "https://github.com/nijaru/aircher/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aircher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["aircher"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
