[project]
name = "aircher-intelligence-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Russo", email = "nijaru7@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.55.0",
    "asyncio-mqtt>=0.16.2",
    "google-generativeai>=0.8.5",
    "jaro-winkler>=2.0.3",
    "mcp>=1.9.4",
    "numpy>=2.3.1",
    "openai>=1.91.0",
    "ptyprocess>=0.7.0",
    "sentence-transformers>=4.1.0",
    "tree-sitter>=0.24.0",
]

[project.scripts]
aircher-intelligence-engine = "aircher_intelligence_engine:sync_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
